--- a/rebal_bow.ipynb
+++ b/rebal_bow.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -35,7 +48,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'df_helper' from 'c:\\\\X\\\\ML\\\\NLP_disaster\\\\df_helper.py'>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# importlib.reload(dfh)\n",
+    "\n",
+    "\n",
+    "if 1:\n",
+    "    url = 'https://datasets.figure-eight.com/figure_eight_datasets/disaster_response_data/disaster_response_messages_training.csv'  \n",
+    "    urllib.request.urlretrieve(url, 'disaster_response_messages_training.csv')\n",
+    "    url = 'https://datasets.figure-eight.com/figure_eight_datasets/disaster_response_data/disaster_response_messages_test.csv'  \n",
+    "    urllib.request.urlretrieve(url, 'disaster_response_messages_test.csv')\n",
+    "    url = 'https://datasets.figure-eight.com/figure_eight_datasets/disaster_response_data/disaster_response_messages_validation.csv'  \n",
+    "    urllib.request.urlretrieve(url, 'disaster_response_messages_validation.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,26 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df=pd.read_csv('disaster_response_messages_training.csv')\n",
-    "df=df[['message','food']]\n",
-    "\n",
-    "test_df=pd.read_csv('disaster_response_messages_test.csv')\n",
-    "test_df=test_df[['message','food']]\n",
-    "\n",
-    "valid_df=pd.read_csv('disaster_response_messages_validation.csv')\n",
-    "valid_df=valid_df[['message','food']]\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,12 +244,156 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "N_est=50\n",
-    "clf= RandomForestClassifier(  criterion=\"entropy\",class_weight=\"balanced\", n_estimators=N_est)\n",
+    "def clf_estimate(cl_dict,bow1k_bal,DOE):\n",
+    "    \"\"\"\n",
+    "    cl_dict= {label:clf}\n",
     "\n",
-    "dfh.plot_learning_curve(clf, 'RandomForest N=%d' % N_est, bow1k_bal['Xtrain'], bow1k_bal['Ytrain'], ylim=None, cv=5, \n",
-    "                    n_jobs=4, train_sizes=np.linspace(.1, 1.0, 5), scoring='f1')"
+    "    \"\"\"\n",
+    "    \n",
+    "    c=0\n",
+    "    for  label,clf in cl_dict.items():\n",
+    "        print(label)\n",
+    "        \n",
+    "        clf.fit(bow1k_bal['Xtrain'], bow1k_bal['Ytrain'])\n",
+    "        y_score = clf.predict_proba(bow1k_bal['Xtest'] )[:,1]\n",
+    "        y_pred = clf.predict(bow1k_bal['Xtest'])\n",
+    "        Y_test=bow1k_bal['Ytest']\n",
+    "\n",
+    "        if c==0:\n",
+    "            rf=dfh.add_metrics(Y_test,y_score,y_pred,label)\n",
+    "        else:\n",
+    "            rf=dfh.add_metrics(Y_test,y_score,y_pred,label,df=rf)        \n",
+    "            \n",
+    "        c+=1\n",
+    "        \n",
+    "    return(rf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_doe(DOE,bow1k_bal):\n",
+    "    cl_dict=dict()\n",
+    "\n",
+    "    for N_est in [10, 20, 50, 100, 200, 500, 1000]:\n",
+    "        cl_dict['RF%d' % N_est]=RandomForestClassifier(  criterion=\"entropy\",class_weight=\"balanced\", n_estimators=N_est)\n",
+    "\n",
+    "    N_est=200\n",
+    "\n",
+    "\n",
+    "    for max_features in [50,100,200,300,500, 1000, 1500, 2000]:\n",
+    "        cl_dict['RF%d_mf%d' % (N_est,max_features) ]=RandomForestClassifier(  criterion=\"entropy\",class_weight=\"balanced\",\n",
+    "                                                                            n_estimators=N_est,max_features=max_features)\n",
+    "\n",
+    "    max_features=1500    \n",
+    "    for max_depth in [4,8, 12, 16, 20, 25, 30, 40]:\n",
+    "        cl_dict['RF%d_mf%d_md%d' % (N_est,max_features,max_depth) ]=RandomForestClassifier(  criterion=\"entropy\",class_weight=\"balanced\",\n",
+    "                                                                            n_estimators=N_est,max_features=max_features, max_depth=max_depth)\n",
+    "\n",
+    "    for C in [1e-4,1e-3,1e-2,1e-1,0.2,0.5,0.75,1.]:\n",
+    "        cl_dict['LR_C%g' % C]=LogisticRegression(random_state=0, solver='liblinear',penalty='l1',max_iter=200,class_weight='balanced', C=C )\n",
+    "    \n",
+    "    rf=clf_estimate(cl_dict,bow1k_bal,DOE)\n",
+    "    \n",
+    "    rf.to_pickle('DOE_%s.p' % DOE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('disaster_response_messages_training.csv')\n",
+    "df=df[['message','food']]\n",
+    "\n",
+    "test_df=pd.read_csv('disaster_response_messages_test.csv')\n",
+    "test_df=test_df[['message','food']]\n",
+    "\n",
+    "valid_df=pd.read_csv('disaster_response_messages_validation.csv')\n",
+    "valid_df=valid_df[['message','food']]\n",
+    "\n",
+    "\n",
+    "X_train=df['message']\n",
+    "Y_train=df['food']\n",
+    "\n",
+    "X_test=test_df['message']\n",
+    "Y_test=test_df['food']\n",
+    "\n",
+    "X_valid=valid_df['message']\n",
+    "Y_valid=valid_df['food']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false_1000_nwords_2000_mindf_1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_false_sample= 1000\n",
+    "n_features=2000\n",
+    "\n",
+    "DOE='false_%s_nwords_%s_mindf_1' % (n_false_sample,n_features)\n",
+    "print(DOE)\n",
+    "\n",
+    "bow1k_bal, bow_bal, tfidf = train_bow(X_train,Y_train, X_test,Y_test,n_false_sample ,  max_df=0.9,min_df=1, max_features=n_features )\n",
+    "make_doe(DOE,bow1k_bal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_false_sample= 500\n",
+    "n_features=2000\n",
+    "\n",
+    "DOE='false_%s_nwords_%s_mindf_1' % (n_false_sample,n_features)\n",
+    "print(DOE)\n",
+    "\n",
+    "bow1k_bal, bow_bal, tfidf = train_bow(X_train,Y_train, X_test,Y_test,n_false_sample ,  max_df=0.9,min_df=1, max_features=n_features )\n",
+    "make_doe(DOE,bow1k_bal)"
    ]
   },
   {
@@ -228,21 +402,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.fit(bow1k_bal['Xtrain'], bow1k_bal['Ytrain'])\n",
-    "y_score = clf.predict_proba(bow1k_bal['Xtest'] )[:,1]\n",
-    "y_pred = clf.predict(bow1k_bal['Xtest'])\n",
-    "Y_test=bow1k_bal['Ytest']\n",
-    "rf=dfh.add_metrics(Y_test,y_score,y_pred,'RF_50_bal',rf)\n",
+    "n_false_sample= 500\n",
+    "n_features=1000\n",
     "\n",
-    "print(\"accuracy_score: \",accuracy_score(Y_test,y_pred))\n",
-    "print(\"average precision: \",average_precision_score(Y_test,y_score))\n",
+    "DOE='false_%s_nwords_%s_mindf_1' % (n_false_sample,n_features)\n",
+    "print(DOE)\n",
     "\n",
-    "print(\"balanced_accuracy_score: \",balanced_accuracy_score(Y_test,y_pred))\n",
-    "print(\"ROC AUC: \",roc_auc_score(Y_test,y_score))\n",
-    "print()\n",
-    "print(classification_report(Y_test,y_pred))\n",
-    "\n",
-    "dfh.print_cm(Y_test, y_pred)"
+    "bow1k_bal, bow_bal, tfidf = train_bow(X_train,Y_train, X_test,Y_test,n_false_sample ,  max_df=0.9,min_df=1, max_features=n_features )\n",
+    "make_doe(DOE,bow1k_bal)"
    ]
   },
   {
@@ -251,24 +418,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_pipe_bal= Pipeline([\n",
-    "    ('bow',bow_bal),\n",
-    "    ('tfidf', tfidf    ),\n",
-    "    ('clf',clf)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from eli5.lime import TextExplainer\n",
+    "n_false_sample= 500\n",
+    "n_features=500\n",
     "\n",
-    "# te = TextExplainer(random_state=42);\n",
-    "# te.fit(message, full_pipe_bal.predict_proba)\n",
-    "# te.show_prediction()"
+    "DOE='false_%s_nwords_%s_mindf_1' % (n_false_sample,n_features)\n",
+    "print(DOE)\n",
+    "\n",
+    "bow1k_bal, bow_bal, tfidf = train_bow(X_train,Y_train, X_test,Y_test,n_false_sample ,  max_df=0.9,min_df=1, max_features=n_features )\n",
+    "make_doe(DOE,bow1k_bal)"
    ]
   },
   {
@@ -277,9 +434,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_lr=LogisticRegression(random_state=0, solver='liblinear',penalty='l1',max_iter=200,class_weight='balanced' )\n",
-    "dfh.plot_learning_curve(clf_lr, 'LogisticRegression',  bow1k_bal['Xtrain'], bow1k_bal['Ytrain'], ylim=None, cv=5, \n",
-    "                    n_jobs=4, train_sizes=np.linspace(.1, 1.0, 5), scoring='f1');"
+    "n_false_sample= 0\n",
+    "n_features=500\n",
+    "\n",
+    "DOE='false_%s_nwords_%s_mindf_1' % (n_false_sample,n_features)\n",
+    "print(DOE)\n",
+    "\n",
+    "bow1k_bal, bow_bal, tfidf = train_bow(X_train,Y_train, X_test,Y_test,n_false_sample ,  max_df=0.9,min_df=1, max_features=n_features )\n",
+    "make_doe(DOE,bow1k_bal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!jupyter nbconvert --to script rebal_bow.ipynb"
    ]
   },
   {
@@ -292,9 +463,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ds]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ds-py"
   },
   "language_info": {
    "codemirror_mode": {
