--- a/rebal_bow2.ipynb
+++ b/rebal_bow2.ipynb
@@ -2880,9 +2880,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ds]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ds-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2894,9 +2894,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
